[tool.poetry]
name = "pfft-python"
version = "0.1.0"
description = ""
authors = ["Johannes Strodel <johannes.strodel@gmail.com>"]
readme = "README.md"
packages = [{include = "pfft_python"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.7"
Cython = "^0.29.33"
numpy = "^1.24.2"
mpi4py = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
