[tool.poetry]
name = "pfft_python"
version = "0.1.13"
description = ""
authors = ["Johannes Strodel <johannes.strodel@gmail.com>"]
packages = [{include = "pfft"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
Cython = "^0.29.33"
numpy = "^1.24.2"
mpi4py = "^3.1.4"


[build-system]
requires = [
    "setuptools >= 65.6.3",
    "wheel >= 0.38.4",
    "numpy >= 1.24.2",
    "Cython == 0.29.33",
    "mpi4py == 3.1.4"
]
build-backend = "setuptools.build_meta"
